@@ -483,7 +483,7 @@ const actionUpload = async() => {
     reader.onload = async function() {
       try{
         var resultOBJ = JSON.parse(reader.result)
-        store.methods.save_node_backup(props.nodeNumber, resultOBJ.backupNode)
+        store.methods.save_node_backup_file(props.nodeNumber, fileName, resultOBJ.backupNode)
         await utils.sleep(500)
         store.methods.request_node_backups_list(store.state.layout.layoutDetails.title, props.nodeNumber)
       } catch(e){
